# packages/shared/src/apigen/models/monitor-run.ts
@@ -1,0 +1,50 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pulse API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import type { HttpRunDetails } from './http-run-details';
+// May contain unused imports in some cases
+// @ts-ignore
+import type { MonitorMinimal } from './monitor-minimal';
+// May contain unused imports in some cases
+// @ts-ignore
+import type { MonitorRunStatus } from './monitor-run-status';
+// May contain unused imports in some cases
+// @ts-ignore
+import type { WithCreatedAt } from './with-created-at';
+// May contain unused imports in some cases
+// @ts-ignore
+import type { WithDurationMs } from './with-duration-ms';
+// May contain unused imports in some cases
+// @ts-ignore
+import type { WithId } from './with-id';
+// May contain unused imports in some cases
+// @ts-ignore
+import type { WithMonitorMinimal } from './with-monitor-minimal';
+// May contain unused imports in some cases
+// @ts-ignore
+import type { WithMonitorRunDetails } from './with-monitor-run-details';
+// May contain unused imports in some cases
+// @ts-ignore
+import type { WithMonitorRunStatus } from './with-monitor-run-status';
+
+/**
+ * @type MonitorRun
+ * @export
+ */
+export type MonitorRun = WithCreatedAt & WithDurationMs & WithId & WithMonitorMinimal & WithMonitorRunDetails & WithMonitorRunStatus;
+
+
