# packages/shared/src/apigen/models/with-monitor-run-details.ts
@@ -1,0 +1,33 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pulse API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import type { HttpRunDetails } from './http-run-details';
+
+/**
+ * 
+ * @export
+ * @interface WithMonitorRunDetails
+ */
+export interface WithMonitorRunDetails {
+    /**
+     * 
+     * @type {HttpRunDetails}
+     * @memberof WithMonitorRunDetails
+     */
+    'details': HttpRunDetails;
+}
+
